# wagtail-rangefilter

./: .coveragerc  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  runtests.py  testmanage.py  tox.ini
.github/workflows/: test.yml
src/wagtail_rangefilter/: __init__.py  apps.py  filters.py
src/wagtail_rangefilter/templates/wagtail_rangefilter/: date_filter.html
tests/: README.md  __init__.py  local.py.example  settings.py  test_filters.py  urls.py
tests/testapp/: apps.py  models.py  wagtail_hooks.py
tests/testapp/migrations/: 0001_initial.py
