[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wagtail-rangefilter"
description = "Integrates django-admin-rangefilter into Wagtail's ModelAdmin"
authors = [
    { name = "Stefan Hammer", email = "stefan.hammer@wunderweiss.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = [
    "django",
    "rangefilter",
    "wagtail",
]
dynamic = [
    "version",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 5",
    "Framework :: Wagtail :: 6",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "django-admin-rangefilter>=0.12",
    "Django>=4.2",
    "wagtail>=5.2",
]

[project.optional-dependencies]
testing = [
    "coverage~=7.5.1",
    "tox~=4.15.0",
    "wagtail-modeladmin==2.0.0",
]

[project.urls]
Homepage = "https://github.com/wunderweiss/wagtail-rangefilter"
Changelog = "https://github.com/wunderweiss/wagtail-rangefilter/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/wunderweiss/wagtail-rangefilter/issues"

[tool.flit.module]
name = "wagtail_rangefilter"

[tool.flit.sdist]
exclude = [
    ".*",
    "manage.py",
    "runtests.py",
    "tests/",
    "tox.ini",
]
